--- a/app/src/main/res/layout/charging_station_details.xml
+++ b/app/src/main/res/layout/charging_station_details.xml
@@ -39,6 +39,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textLatitude" />
 
+    <ImageView
+        android:id="@+id/close"
+        android:layout_width="51dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
     <TextView
         android:id="@+id/phone"
         android:layout_width="wrap_content"
@@ -63,20 +73,19 @@
         android:id="@+id/favourite"
         android:layout_width="89dp"
         android:layout_height="101dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/favourite" />
 
     <Button
-        android:id="@+id/close"
-        android:layout_width="wrap_content"
+        android:id="@+id/favouriteStationBtn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="70dp"
-        android:text="Close"
+        android:layout_marginBottom="40dp"
+        android:text="FAVOURITE STATIONS"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:layout_editor_absoluteX="136dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
