--- a/app/src/main/res/layout/charging_station_list.xml
+++ b/app/src/main/res/layout/charging_station_list.xml
@@ -65,6 +65,8 @@
         android:layout_marginTop="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchButton"
-        tools:layout_editor_absoluteX="57dp" />
+        tools:layout_editor_absoluteX="57dp" >
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
