MovieInformation Step3 Finished

--- a/app/src/main/res/layout/activity_movie_saved.xml
+++ b/app/src/main/res/layout/activity_movie_saved.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:text="Enter Theater Name"
+        android:textColor="#612828"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,6 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:text="Enter the invitation code"
+        android:textColor="#612828"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
 
@@ -50,12 +52,11 @@
 
     <Button
         android:id="@+id/searchBtn"
-        android:layout_width="match_parent"
+        android:layout_width="90dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
-        android:text="search movie information"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:text="search theater"
+        android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
@@ -65,5 +66,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
+        app:srcCompat="@drawable/cinema" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
