--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -14,20 +14,23 @@ android:visibility="visible"
     <ImageButton
         android:id="@+id/welcomImageButton"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:srcCompat="@android:drawable/presence_video_busy" />
+        android:layout_height="60dp"
+        android:background="#55AFD8"
+        app:srcCompat="@drawable/play2" />
 
     <ImageButton
         android:id="@+id/adultVericicationImageButton"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:srcCompat="@android:drawable/presence_video_online" />
+        android:layout_height="60dp"
+        android:background="#66BDDF"
+        app:srcCompat="@drawable/marketplace_icon" />
 
     <TextView
         android:id="@+id/movieTextView"
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:text="Enter Movie name " />
+        android:text="Enter Movie name "
+        android:textColor="#612828" />
 
     <EditText
         android:id="@+id/inputMovieName"
@@ -41,7 +44,8 @@ android:visibility="visible"
         android:id="@+id/actorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Entry Actor Name" />
+        android:text="Entry Actor Name"
+        android:textColor="#612828" />
 
     <EditText
         android:id="@+id/inputActorName"
@@ -55,7 +59,8 @@ android:visibility="visible"
         android:id="@+id/memberShipTextView"
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:text="Membership number " />
+        android:text="Membership number "
+        android:textColor="#612828" />
 
     <EditText
         android:id="@+id/inputMemNumber"
@@ -67,12 +72,14 @@ android:visibility="visible"
 
     <Button
         android:id="@+id/longinBtn"
-        android:layout_width="match_parent"
+        android:layout_width="90dp"
         android:layout_height="48dp"
+        android:background="@color/black"
         android:rotation="0"
         android:rotationY="0"
         android:text="Longin"
         android:textAlignment="center"
+        android:textColor="#FFF7F7"
         android:textSize="8sp" />
 
 
@@ -85,6 +92,7 @@ android:visibility="visible"
         android:id="@+id/helpButton"
         android:layout_width="90dp"
         android:layout_height="48dp"
+        android:background="@color/white"
         android:text="HELP"
         android:textSize="8sp" />
 
