--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -29,7 +29,7 @@
         android:id="@+id/movieTextView"
         android:layout_width="match_parent"
         android:layout_height="24dp"
-        android:text="Enter Movie name "
+        android:text="Enter Movie Name"
         android:textColor="#612828" />
 
     <EditText
@@ -77,7 +77,7 @@
         android:background="@color/black"
         android:rotation="0"
         android:rotationY="0"
-        android:text="Longin"
+        android:text="@string/Longin"
         android:textAlignment="center"
         android:textColor="#FFF7F7"
         android:textSize="8sp" />
@@ -94,21 +94,21 @@
         android:layout_width="90dp"
         android:layout_height="48dp"
         android:background="@color/white"
-        android:text="HELP"
+        android:text="@string/Help"
         android:textSize="8sp" />
 
     <Button
         android:id="@+id/favoritesButton"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:text="Favorites"
+        android:text="@string/Favorites"
         android:textSize="8sp" />
 
     <Button
         android:id="@+id/detailBtn"
         android:layout_width="90dp"
         android:layout_height="48dp"
-        android:text="Detail"
+        android:text="@string/Detail"
         android:textSize="8sp" />
 
 
