--- a/app/src/main/res/layout/activity_movie_saved.xml
+++ b/app/src/main/res/layout/activity_movie_saved.xml
@@ -55,7 +55,7 @@
         android:layout_width="90dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
-        android:text="search theater"
+        android:text="@string/searchTeater"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
