--- a/app/src/main/res/layout/activity_save_second.xml
+++ b/app/src/main/res/layout/activity_save_second.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="Cinema Tel line"
+        android:text="@string/TheaterTel"
         app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
         app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
 
