--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -14,14 +14,14 @@
     <ImageButton
         android:id="@+id/welcomImageButton"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         android:background="#55AFD8"
         app:srcCompat="@drawable/play2" />
 
     <ImageButton
         android:id="@+id/adultVericicationImageButton"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         android:background="#66BDDF"
         app:srcCompat="@drawable/marketplace_icon" />
 
@@ -39,6 +39,12 @@
         android:ems="10"
         android:hint="Type Movie name"
         android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:text="get movie ifmatiom" />
 
     <TextView
         android:id="@+id/actorTextView"
@@ -72,44 +78,87 @@
 
     <Button
         android:id="@+id/longinBtn"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
+        android:layout_width="96dp"
+        android:layout_height="30dp"
         android:background="@color/black"
         android:rotation="0"
         android:rotationY="0"
         android:text="@string/Longin"
         android:textAlignment="center"
         android:textColor="#FFF7F7"
-        android:textSize="8sp" />
+        android:textSize="10sp" />
 
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="title goes here"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="year goes here"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="rating goes here"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/runtime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="runtime goe here"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/mainactors"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="main actors goes here"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/plot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="plot goes here"
+        android:visibility="invisible" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="164dp"
-        app:srcCompat="@drawable/moviepo4" />
+        android:layout_height="101dp"
+        android:visibility="invisible" />
+
 
     <Button
         android:id="@+id/helpButton"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
+        android:layout_width="96dp"
+        android:layout_height="30dp"
         android:background="@color/white"
         android:text="@string/Help"
-        android:textSize="8sp" />
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/favoritesButton"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
+        android:layout_width="96dp"
+        android:layout_height="36dp"
         android:text="@string/Favorites"
-        android:textSize="8sp" />
+        android:textSize="10sp" />
 
     <Button
         android:id="@+id/detailBtn"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
+        android:layout_width="96dp"
+        android:layout_height="36dp"
         android:text="@string/Detail"
-        android:textSize="8sp" />
+        android:textSize="10sp" />
 
 
 </LinearLayout>
