--- a/app/src/main/res/layout/activity_movie_saved.xml
+++ b/app/src/main/res/layout/activity_movie_saved.xml
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/searchBtn"
-        android:layout_width="90dp"
+        android:layout_width="96dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
         android:text="@string/searchTeater"
@@ -69,13 +69,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="234dp"
+        android:layout_height="340dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputPassword"
+        app:layout_constraintVertical_bias="0.482"
         app:srcCompat="@drawable/cinema" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
