--- a/app/src/main/res/layout/charging_station_item.xml
+++ b/app/src/main/res/layout/charging_station_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:descendantFocusability="beforeDescendants"
     android:layout_height="wrap_content">
 
     <TextView
@@ -12,6 +13,9 @@
         android:layout_marginTop="32dp"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:textIsSelectable="true"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
