--- a/app/src/main/res/layout/charging_station_list.xml
+++ b/app/src/main/res/layout/charging_station_list.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:descendantFocusability="beforeDescendants"
+    android:background="@color/white">
     <TextView
         android:id="@+id/latitude"
         android:layout_width="wrap_content"
@@ -16,6 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/help"
+        android:layout_width="74dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Help"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/latitudeInput"
         android:layout_width="wrap_content"
@@ -24,6 +35,7 @@
         android:layout_marginTop="10dp"
         android:hint="@string/latitudeInput"
         android:textSize="20dp"
+        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/latitude" />
 
@@ -45,6 +57,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="10dp"
         android:hint="@string/longitudeInput"
+        android:inputType="number"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/longitude" />
