--- a/app/src/main/res/layout/station_detail_list_layout.xml
+++ b/app/src/main/res/layout/station_detail_list_layout.xml
@@ -6,23 +6,27 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/historylist"
-        android:layout_width="289dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="32dp"
+        android:id="@+id/stop_list"
+        android:layout_width="314dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="10dp"
         android:text="Message goes here"
         android:textColor="#0E0101"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:layout_width="34dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="280dp"
+        android:id="@+id/imageView2"
+        android:layout_width="41dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/delete_icon"
+        android:src="@drawable/busroute_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
