--- a/app/src/main/res/layout/activity_movie_saved.xml
+++ b/app/src/main/res/layout/activity_movie_saved.xml
@@ -69,7 +69,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="234dp"
+        android:layout_width="wrap_content"
         android:layout_height="340dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
