--- a/app/src/main/res/layout/movie_popout_header.xml
+++ b/app/src/main/res/layout/movie_popout_header.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,16 +9,41 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Header goes here"
-        tools:layout_editor_absoluteX="1dp" />
+        android:layout_width="418dp"
+        android:layout_height="58dp"
+        android:background="#B1B4C6"
+        android:text="Activity's Title: Movie Information\nAuthor:Simon Ao\nVersion Number: 1.0"
+
+
+        android:textColor="#000000"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
+        android:layout_width="60dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/presence_video_busy"
+        tools:srcCompat="@android:drawable/presence_video_busy" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/clear"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="27dp" />
-</LinearLayout>
+        android:layout_marginTop="120dp"
+        android:text="Movie Information API"
+        android:textColor="#594F70"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.157"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
