--- a/app/src/main/res/layout/oct_layout.xml
+++ b/app/src/main/res/layout/oct_layout.xml
@@ -7,10 +7,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/oct_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="OC Transpo"
+        android:text="@string/oct_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/oct_header" />
 
     <Button
         android:id="@+id/search_bar"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Return"
+        android:text="@string/returnButtonOCt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -65,7 +65,7 @@
         android:layout_width="258dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:text="Favourites"
+        android:text="@string/favouritesButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_bar"
         app:rippleColor="#AB47BC" />
