--- a/app/src/main/res/layout/station_detail_layout.xml
+++ b/app/src/main/res/layout/station_detail_layout.xml
@@ -30,13 +30,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/returnButton"
+        android:id="@+id/returnButtonStation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Return"
+        android:text="@string/returnButtonStation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stationInformationRecycler" />
