--- a/app/src/main/res/layout/popout_header_oct.xml
+++ b/app/src/main/res/layout/popout_header_oct.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/archivo_black"
-        android:text="@string/navigation_title"
+        android:text="@string/oct_navigation_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.22"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:layout_width="97dp"
         android:layout_height="17dp"
         android:fontFamily="@font/archivo_black"
-        android:text="@string/author"
+        android:text="@string/oct_author"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/version"
@@ -45,7 +45,7 @@
         android:layout_height="17dp"
         android:layout_marginEnd="158dp"
         android:fontFamily="@font/archivo_black"
-        android:text="@string/version"
+        android:text="@string/oct_version"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/navigation_title"
