--- a/app/src/main/res/menu/oct_main_menu.xml
+++ b/app/src/main/res/menu/oct_main_menu.xml
@@ -20,18 +20,25 @@
 <!--            app:showAsAction="always" />-->
 
         <item
-            android:id="@+id/id_favorites"
+            android:id="@+id/id_favorites_oct"
             android:icon="@android:drawable/btn_star_big_on"
             android:orderInCategory="1"
-            android:title="@string/id_favorites"
+            android:title="@string/id_favorites_oct"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/id_search"
+            android:id="@+id/id_search_oct"
             android:icon="@android:drawable/ic_menu_search"
             android:orderInCategory="2"
-            android:title="@string/id_search"
+            android:title="@string/id_search_oct"
             app:showAsAction="always" />
+        <item
+            android:id="@+id/id_main_from_oct"
+            android:icon="@drawable/home_icon"
+            android:orderInCategory="3"
+            android:title="@string/id_main_from_oct"
+            app:showAsAction="always" />
+
 
 
 </menu>
