MovieInformation use NavigationDrawer step7

--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -58,7 +58,7 @@
         android:id="@+id/movieIfoBtn"
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:text="get movie ifmatiom" />
+        android:text="@string/getMovie" />
 
     <TextView
         android:id="@+id/memberShipTextView"
