--- a/app/src/main/res/menu/movie_api_activity_actions.xml
+++ b/app/src/main/res/menu/movie_api_activity_actions.xml
@@ -9,20 +9,20 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/id_increase"
-        android:icon="@drawable/increase"
-        android:title="Increase Text Size"
+        android:id="@+id/id_favorite"
+        android:icon="@drawable/favorite_star_icon"
+        android:title="Favorite Movies"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/id_decrease"
-        android:icon="@drawable/decrease"
-        android:title="Decrease Text Size"
+        android:id="@+id/id_home"
+        android:icon="@drawable/homepages_icon"
+        android:title="Main page port"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/id_help"
-        android:icon="@android:drawable/ic_menu_help"
+        android:icon="@drawable/help_information_icon"
         android:title="HELP"
         app:showAsAction="always" />
 
