--- a/app/src/main/res/layout/movie_save_second.xml
+++ b/app/src/main/res/layout/movie_save_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MovieIfo.SaveSecondActivity">
+    tools:context=".MovieIfo.SaveMovSecondActivity">
 
     <TextView
         android:id="@+id/textView"
