--- a/app/src/main/res/layout/soccer_game_item.xml
+++ b/app/src/main/res/layout/soccer_game_item.xml
@@ -2,12 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF"
+    android:layout_marginBottom="1dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        card_view:cardCornerRadius="4dp"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,19 +24,25 @@
                 android:id="@+id/soccer_game_images"
                 android:layout_width="149dp"
                 android:layout_height="101dp"
-                tools:layout_editor_absoluteX="1dp"
-                tools:layout_editor_absoluteY="0dp"
+                android:layout_marginStart="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
             <TextView
                 android:id="@+id/soccer_game_title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="5dp"
+                android:justificationMode="inter_word"
                 android:text="Title"
                 android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.008"
                 app:layout_constraintStart_toEndOf="@+id/soccer_game_images"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,12 +58,18 @@
 
             <TextView
                 android:id="@+id/soccer_game_description"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:justificationMode="inter_word"
                 android:text="Description"
                 android:textColor="#736F6F"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/soccer_game_date"
                 app:layout_constraintTop_toBottomOf="@+id/soccer_game_date" />
         </androidx.constraintlayout.widget.ConstraintLayout>
