MovieInformation finished milestone 2_7

--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -134,7 +134,7 @@
     <ImageView
         android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="190dp"
         android:visibility="invisible" />
 
 
@@ -151,12 +151,12 @@
 
 
     <!--detail button-->
-    <Button
+   <!-- <Button
         android:id="@+id/detailBtn"
         android:layout_width="96dp"
         android:layout_height="36dp"
         android:text="@string/DetailMovie"
-        android:textSize="10sp" />
+        android:textSize="10sp" />-->
 
 
 </LinearLayout>
