--- a/app/src/main/res/layout/movie_info_record.xml
+++ b/app/src/main/res/layout/movie_info_record.xml
@@ -6,22 +6,22 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/sendbutton"
+        android:id="@+id/addMoviebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="@string/questionMovie"
+        android:text="@string/addMovieInfo"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/receivebutton"
-        app:layout_constraintEnd_toEndOf="@+id/receivebutton"
+        app:layout_constraintBottom_toTopOf="@+id/addActorbutton"
+        app:layout_constraintEnd_toEndOf="@+id/addActorbutton"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/receivebutton"
+        android:id="@+id/addActorbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/FeedbackMovie"
+        android:text="@string/addActorName"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -32,10 +32,10 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Enter movie question"
+        android:hint="Enter Facorite Information"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/receivebutton" />
+        app:layout_constraintStart_toEndOf="@+id/addActorbutton" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myrecycler"
