--- a/app/src/main/res/layout/movie_sent_message_layout.xml
+++ b/app/src/main/res/layout/movie_sent_message_layout.xml
@@ -9,9 +9,10 @@
         android:id="@+id/imageView2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/help_icon"
+        android:src="@drawable/movieply_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
     <TextView
         android:id="@+id/message"
