MovieInformation finished milestone 2_8

--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -143,10 +143,10 @@
 
     <!--favorites button-->
     <Button
-        android:id="@+id/favoritesButton"
+        android:id="@+id/newMovieButton"
         android:layout_width="96dp"
         android:layout_height="36dp"
-        android:text="@string/FavoritesMovie"
+        android:text="@string/newMovieBtn"
         android:textSize="10sp" />
 
 
