--- a/app/src/main/res/layout/movie_info_record.xml
+++ b/app/src/main/res/layout/movie_info_record.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Enter Facorite Information"
+        android:hint="Enter Favorite Movie or Actor "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addActorbutton" />
