--- a/app/src/main/res/menu/movie_api_activity_actions.xml
+++ b/app/src/main/res/menu/movie_api_activity_actions.xml
@@ -21,7 +21,7 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/id_help"
+        android:id="@+id/id_movie_help"
         android:icon="@drawable/help_information_icon"
         android:title="HELP"
         app:showAsAction="always" />
