Finished Milestone 3 of soccer game api by adding more JavaDocs.

--- a/app/src/main/res/layout/soccer_game_popout_header.xml
+++ b/app/src/main/res/layout/soccer_game_popout_header.xml
@@ -4,10 +4,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/soccer" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/soccer_games_information"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black" />
 
 </LinearLayout>
