--- a/app/src/main/res/layout/soccer_game_list.xml
+++ b/app/src/main/res/layout/soccer_game_list.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/toolbar"/>
+        android:id="@+id/toolbar"
+        app:layout_scrollFlags="scroll|enterAlways|snap"/>
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/myDrawerLayout"
